------------------------------------------------------------------------
r1835 | gaser | 2021-05-29 01:06:19

Changed paths:
M       CAT12-Manual.pdf
M       CHANGES.txt
M       cat12.m
M       cat_conf_tools.m
M       cat_stat_IQR.m
M       cat_stat_check_cov.m
M       cat_stat_check_cov2.m
A       cat_stat_quality_measures.m
M       html/cat_methods_QA.html
M       html/cat_versions.html
M       standalone/cat_standalone.sh
A       standalone/cat_standalone_get_quality.txt
 M      templates_MNI152NLin2009cAsym/thalamus.csv
 M      templates_MNI152NLin2009cAsym/thalamus.nii
MM      templates_MNI152NLin2009cAsym/thalamus.txt
 M      templates_external/MNI152NLin2009cSym.nii
 M      templates_external/y_MNI152NLin2009cSym_to_MNI152NLin2009cAsym.nii

(1) Added:   New function to estimate and save quality measures for external 
             analysis.
(2) Added:   New standalone tool for abovementioned function.
(3) Changed: Added automatically search for xml-files for cat_stat_check_cov.m.
(4) Changed: Updated CAT12 manual and version information.
------------------------------------------------------------------------
r1834 | dahnke | 2021-05-28 16:45:20 +0200 (Fr, 28 Mai 2021) | 39 lines

Changed paths:
M       CHANGES.txt
M       cat_main.m
M       cat_main1639.m
M       cat_main_LASs.m
M       cat_main_amap.m
M       cat_main_gintnorm.m
M       cat_main_gintnormi.m
M       cat_main_registration.m
M       cat_main_updateSPM.m
M       cat_main_updateSPM1639.m
M       cat_run.m
M       cat_run_job.m
M       cat_run_job1639.m
M       cat_surf_fun.m
M       cat_surf_render2.m
M       cat_vol_iscaling.m
M       cat_vol_partvol.m
M       cat_vol_qa.m
M       cat_vol_sanlm.m

(1) Fixed:   Tested the new cat_main pipeline in case of non-T1 contrasts.
             Corrected bugs in the call and with the boundary box in cat_main. 
             Added simple skull-stripping for non-T1 data in cat_main_updateSPM.